--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,41 @@
-theme: jekyll-theme-slate
+#version
+version: "1.0"
+
+permalink: /:year/:month/:day/:title/
+
+# 站点设置
+title: "ethen"
+# email: ynxwchy@126.com
+description: "ethen的个人博客"
+keywords: "ethen"
+
+# 用户信息设置
+github_username: ethendev
+
+# Markdown设置
+kramdown:
+  input:  GFM
+  use_coderay: true
+  coderay:
+    coderay_line_numbers:  nil
+
+
+# 地址设置
+baseurl: "/ethendev.github.io"
+url: "http://127.0.0.1:4000"
+
+
+# 分页设置
+paginate: 10
+paginate_path: "page/:num"
+
+#scss设置
+sass:
+    sass_dir: /assets/stylesheet
+    style: :compressed
+
+# duoshuo设置
+# duoshuo_shortname: 
+
+# 百度统计设置
+# baidu_analysis:
