--- a/_config.yml
+++ b/_config.yml
@@ -1,41 +1,46 @@
-#version
-version: "1.0"
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely need to edit after that.
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+title: BlogHub
+brief-intro: Back-end Dev Engineer
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://ethendev.github.io/" # the base hostname & protocol for your site
 
 permalink: /:year/:month/:day/:title/
 
-# 站点设置
-title: "ethen"
-# email: ynxwchy@126.com
-description: "ethen的个人博客"
-keywords: "ethen"
 
-# 用户信息设置
-github_username: ethendev
+# comments
+# two ways to comment, only choose one, and use your own short name
+#duoshuo_shortname: 
+#disqus_shortname: 
 
-# Markdown设置
+# statistic analysis
+# peplace your own ID
+#baidu_tongji_id: xxxxxx
+google_analytics_id: UA-119387651-1 # google 分析追踪id
+
+# Build settings
+markdown: kramdown
+
 kramdown:
-  input:  GFM
-  use_coderay: true
-  coderay:
-    coderay_line_numbers:  nil
+  input: GFM
+  syntax_highlighter: rouge
 
+# port
+# port: 1234
 
-# 地址设置
-baseurl: "/ethendev.github.io"
-url: "http://127.0.0.1:4000"
+# url
+category_dir: category/
+tag_dir: tag/
 
+# excerpt
+excerpt_separator: "\n\n\n\n"
 
-# 分页设置
-paginate: 10
-paginate_path: "page/:num"
-
-#scss设置
-sass:
-    sass_dir: /assets/stylesheet
-    style: :compressed
-
-# duoshuo设置
-# duoshuo_shortname: 
-
-# 百度统计设置
-# baidu_analysis:
+# paginate
+gems: [jekyll-paginate]
+paginate: 5
