--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,15 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: BlogHub
-brief-intro: Back-end Dev Engineer
+title: Silo
+brief-intro: 技术博客
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ethendev.github.io/" # the base hostname & protocol for your site
 
 permalink: /:year/:month/:day/:title/
 
+# Contact information
+github_username: ethendev
 
 # comments
 # two ways to comment, only choose one, and use your own short name
@@ -22,7 +24,7 @@ permalink: /:year/:month/:day/:title/
 # statistic analysis
 # peplace your own ID
 #baidu_tongji_id: xxxxxx
-google_analytics_id: UA-119387651-1 # google 分析追踪id
+google_analytics_id: UA-119387651-1 # google id
 
 # Build settings
 markdown: kramdown
