--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Silo
-brief-intro: 技术博客
+title: Silo技术博客
+brief-intro: 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ethendev.github.io/" # the base hostname & protocol for your site
 
